[package]
name = "gdclone"
version = "0.1.0"
authors = ["Opstic"]
edition = "2021"
repository = "https://github.com/opstic/gdclone"
homepage = "https://github.com/opstic/gdclone"

[dependencies]
anyhow = "1.0"
base64-simd = "0.8"
bevy = { version = "0.12", default-features = false, features = [
    "android_shared_stdcxx",
    "bevy_asset",
    "bevy_audio",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "bevy_sprite",
    "bevy_winit",
    "default_font",
#    "dynamic_linking",
    "multi-threaded",
    "mp3",
    "png",
    "webgl2",
    "x11",
] }
bevy_enum_filter = "0.3"
bitflags = "2.4"
bytemuck = { version = "1.14", features = ["derive"] }
dashmap = { version = "5.5", features = ["raw-api"] }
futures-lite = "2.1"
indexmap = "2.1"
libdeflater = "1.19"
memchr = "2.6"
plist = { git = "https://github.com/opstic/rust-plist" }
quick-xml = { version = "0.31", features = ["serialize"] }
radsort = "0.1"
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0"
zstd = "0.13"

[build-dependencies]
embed-resource = "2.4"
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev-optimized]
inherits = "dev"
opt-level = 1
lto = "off"

[profile.release]
debug = true
#lto = "fat"
split-debuginfo = "packed"