[package]
name = "gdclone"
version = "0.1.0"
authors = ["Opstic"]
edition = "2021"
repository = "https://github.com/opstic/gdclone"
homepage = "https://github.com/opstic/gdclone"
readme = "README.md"
license = "MPL-2.0"

[dependencies]
arrayvec = "0.7"
anyhow = "1.0"
base64-simd = "0.8"
bevy = { version = "0.13", default-features = false, features = [
    "android_shared_stdcxx",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_render",
    "bevy_text",
    "bevy_ui",
    "bevy_sprite",
    "bevy_winit",
    "default_font",
    #   "dynamic_linking",
    "multi-threaded",
    "mp3",
    "png",
    "wayland",
    "webgl2",
    "x11",
] }
bevy_egui = "0.26"
bevy_kira_audio = { version = "0.19", default-features = false, features = ["mp3"] }
bitflags = "2.4"
bytemuck = { version = "1.14", features = ["derive"] }
dashmap = { version = "5.5", features = ["raw-api"] }
directories = "5.0"
dyn-clone = "1.0"
egui = "0.26"
fastrand = "2.0"
float_next_after = "1.0"
futures-lite = "2.1"
image = { version = "0.24", default-features = false, features = ["png"] }
indexmap = "2.1"
kira = { version = "0.8", default-features = false, features = ["cpal", "mp3"] }
libdeflater = "1.19"
memchr = "2.6"
native-dialog = "0.7"
nested_intervals = { git = "https://github.com/opstic/nested_intervals" }
ordered-float = "4.2"
percent-encoding = "2.3"
phf = "0.11"
plist = { git = "https://github.com/opstic/rust-plist" }
quick-xml = { version = "0.31", features = ["serialize"] }
radsort = "0.1"
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0"
simdutf8 = "0.1"
smallvec = "1.11"
steamlocate = "2.0.0-beta.2"
ureq = "2.9"
winit = "0.29"
zstd = "0.13"

[build-dependencies]
phf_codegen = "0.11"
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0"
embed-resource = "2.4"

[profile.dev.package."*"]
opt-level = 3

[profile.dev-optimized]
inherits = "dev"
opt-level = 1
lto = "off"

[profile.release]
debug = true
#lto = "fat"
split-debuginfo = "packed"